# haskell-robot

./: Dockerfile  Makefile  robot.cabal
app/: Main.hs
src/: Robot.hs
src/Robot/: Command.hs  Table.hs
tests/: RobotSpec.hs
