name:                robot
version:             0.1.0.0
synopsis:            Robot test in Haskell.
license:             MIT
license-file:        LICENSE
author:              Alex Smith
maintainer:          ags@fastmail.fm
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Robot
                       Robot.Command
                       Robot.Table
  build-depends:       base

executable robot
  ghc-options:        -Wall
  main-is:             Main.hs
  build-depends:       base
                       , robot
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                       , robot
                       , hspec
                       , QuickCheck
